# commit-to-blog

./: .env.example  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  AGENT.md  AGENTS.md  CHECKLIST.md  CLAUDE.md  CODE_CONVENTION.md  Mission.md  PLAN.md  PROJECT_STRUCTURE.md  README.md  biome.json  checklist.md  docker-compose.yml  eslint.config.mjs  github_blog_generator_plan.md  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  week1-plan.md  week1.md  week2-plan.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260513_0001_create_blogpost.py  20260513_0002_create_authsession.py
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: chat.py  drafts.py  github.py  posts.py  repos.py  router.py  routes.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: session.py
backend/app/services/: github.py  llm.py  posts.py
backend/app/utils/: http_retry.py  schema_compat.py
backend/prisma/: schema.prisma
backend/scripts/: verify_staging_migration.sh
backend/src/: app.ts  index.js  server.js  server.ts
backend/src/config/: database.ts  env.ts
backend/src/controllers/: ai.controller.ts  auth.controller.ts  blog.controller.ts  github.controller.ts  (+1 more)
backend/tests/: test_api.py  test_database_migrations.py  test_http_retry.py
(+592 files in other folders)
