[project]
name = "commit-to-blog-backend"
version = "0.1.0"
description = "FastAPI backend for GitHub commit to blog generation"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14.0",
  "anthropic>=0.39.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.5.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
  "ruff>=0.15.12",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["B008"]
